# melt-plumes

./: .buildinfo  .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  license.html  noxfile.py  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  license.doctree
.github/workflows/: constraints.txt  formatting_checks.yml  release.yml
docs/: conf.py  index.md  quick_start.md  reference.md  requirements.txt  usage.md
src/melt_plumes/: __init__.py  __main__.py  bpt.py  helpers.py  solve.py
src/melt_plumes/data/: LeConte_profile.csv
tests/: __init__.py  test_bpt.py  test_main.py
