[project]
authors = [
    {name = "Jesse Cusack", email = "jesse.cusack@oregonstate.edu"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.8"
dependencies = [
    "numpy<2.0.0,>=1.23.5",
    "scipy<2.0.0,>=1.9.3",
    "seawater<4.0.0,>=3.3.4",
]
name = "melt-plumes"
version = "0.1.0"
description = "Melt Plumes"
readme = "README.md"

[project.urls]
Changelog = "https://github.com/jessecusack/melt-plumes/releases"
homepage = "https://github.com/jessecusack/melt-plumes"
repository = "https://github.com/jessecusack/melt-plumes"
documentation = "https://melt-plumes.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "myst-nb<1.0.0,>=0.17.1",
    "pytest>=8.3.5",
    "ruff>=0.12.11",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["melt_plumes", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
plugins = [
  "numpy.typing.mypy_plugin"
]
